Fix 3.9 vertical alignment presentation issue

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@
     text-indent: 0;
 }
 
+/* Moodle 3.9 presentation fix to vertically align the checkbox and the answer text on the same line. */
+.multichoiceset .answer label.w-100 {
+margin-top: -1.5em;
+}
+
 .que.multichoiceset .answer div.r0 .icon.fa-check,
 .que.multichoiceset .answer div.r1 .icon.fa-check,
 .que.multichoiceset .answer div.r0 .icon.fa-remove,
